# fluorescence-microdrop-plugin-py

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  microdrop_plugin.toml  pyproject.toml
examples/: run_firmware_upload_dialog_demo.py
fluorescence_controller/: consts.py  datamodels.py  firmware_uploader.py  fluorescence_controller_base.py  fluorescence_serial_proxy.py  plugin.py
fluorescence_controller/interfaces/: i_fluorescence_control_mixin_service.py
fluorescence_controller/services/: fluorescence_command_setter_service.py  fluorescence_firmware_upload_service.py  fluorescence_monitor_mixin_service.py
fluorescence_controller/tests/: test_board_identity.py  test_command_setter.py
fluorescence_controls_ui/: camera_session.py  capture_service.py  chain_model.py  consts.py  controller.py  dock_pane.py  live_state.py  menus.py  message_handler.py  model.py  plugin.py  preferences.py  view.py
fluorescence_controls_ui/advanced_camera/: controller.py  dock_pane.py  model.py  temperature_canvas.py  view.py
fluorescence_controls_ui/cameras/: asi_thread.py  camera_settings.py  consts.py  provider.py  zwoasi.py
fluorescence_controls_ui/firmware_upload/: consts.py  controller.py  model.py  view.py
fluorescence_controls_ui/image_viewer/: controller.py  discovery.py  display.py  dock_pane.py  model.py  view.py
fluorescence_controls_ui/preview/: consts.py  dock_pane.py
fluorescence_controls_ui/tests/: test_asi_frames.py  test_attach_flow.py  test_camera_settings.py  (+6 more)
fluorescence_protocol_controls/: capture_chain.py  consts.py  plugin.py  step_settings.py
(+10 files in other folders)
